Update index.html : Project section
Added the correct links to projects 
Added a new project

--- a/index.html
+++ b/index.html
@@ -82,15 +82,19 @@
             <h3>Quiz Game</h3>
             <p>A Java application that simulates a quiz game with dynamically generated questions.</p>
             <p><strong>Technologies:</strong> Java, JUnit, GitHub</p>
-            <a href="https://github.com/Letlhogonolo-Kgatshe/quiz-game" target="_blank">View Code</a> |
-            <a href="https://your-live-demo-link.com" target="_blank">Live Demo</a>
+            <a href="https://github.com/Letlhogonolo-Kgatshe/Quiz-App.git" target="_blank">View Code</a> |
         </div>
         <div class="project">
             <h3>Course Registration System</h3>
             <p>A Java program that manages student registrations, including adding and removing students.</p>
-            <p><strong>Technologies:</strong> Java, GitHub</p>
-            <a href="https://github.com/Letlhogonolo-Kgatshe/course-registration-system" target="_blank">View Code</a> |
-            <a href="https://your-live-demo-link.com" target="_blank">Live Demo</a>
+            <p><strong>Technologies:</strong> Java, JUnit, GitHub</p>
+            <a href="https://github.com/Letlhogonolo-Kgatshe/Student-registry.git" target="_blank">View Code</a> |
+        </div>
+        <div class="project">
+            <h3>Snake Game</h3>
+            <p>A Java Snake Game Application using JFrame.</p>
+            <p><strong>Technologies:</strong> Java, JUnit , JFrame, GitHub</p>
+            <a href="https://github.com/Letlhogonolo-Kgatshe/SnakeGame.git" target="_blank">View Code</a> |
         </div>
     </section>
 
