--- a/index.html
+++ b/index.html
@@ -141,12 +141,13 @@
                     <h3>Tools</h3>
                     <ul>
                         <li>JUnit Testing</li>
+                        <li>JFrame</li>
                         <li>Microsoft Office Suite</li>
                         <li>Visual Studio Code</li>
                     </ul>
                 </div>
                 <div class="skill-category">
-                    <h3>Others</h3>
+                    <h3>Soft Skills</h3>
                     <ul>
                         <li>Tutoring</li>
                         <li>Communication</li>
@@ -201,7 +202,7 @@
             <p><strong>Location:</strong> Cape Town, 7708</p>
             <p><strong>Phone:</strong> <a href="tel:+27664207144">+27 664 207 144</a></p>
             <p><strong>Email:</strong> <a href="mailto:Tlhogikgatshe@gmail.com">Tlhogikgatshe@gmail.com</a></p>
-            <p><strong>LinkedIn:</strong> <a href="YOUR_LINKEDIN_URL" target="_blank">LinkedIn Profile</a></p>
+            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/letlhogonolo-kgatshe-69aa2a2b7/" target="_blank">Letlhogonolo Kgatshe</a></p>
             <p><strong>GitHub:</strong> <a href="https://github.com/Letlhogonolo-Kgatshe" target="_blank">github.com/Letlhogonolo-Kgatshe</a></p>
         </div>
     </section>
