--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
             <p><strong>Technologies:</strong> Java, JUnit , JFrame, GitHub</p>
             <a href="https://github.com/Letlhogonolo-Kgatshe/SnakeGame.git" target="_blank">View Code</a> |
         </div>
+        <div class="project">
+            <h3>E-Commerce Platform</h3>
+            <p>A C# E-Commerce platform for placing orders online</p>
+            <p><strong>Technologies:</strong> C#, .NET Framework , Microsoft Azure, GitHub</p>
+            <a href="https://github.com/Letlhogonolo-Kgatshe/SnakeGame.git" target="_blank">View Code</a> |
+        </div>
     </section>
 
     <style>
