--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h3>Snake Game</h3>
             <p>A Java Snake Game Application using JFrame.</p>
             <p><strong>Technologies:</strong> Java, JUnit , JFrame, GitHub</p>
-            <a href="https://github.com/Letlhogonolo-Kgatshe/SnakeGame.git" target="_blank">View Code</a> |
+            <a href="https://github.com/Letlhogonolo-Kgatshe/E-commerce-platform.git">View Code</a> |
         </div>
     </section>
 
